# onip

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
forms/: MainWindow.ui
src/: Application.cpp  GLWindow.cpp  MainWindow.cpp  OniDevice.cpp  OniVideoStream.cpp  main.cpp
src/include/: Application.hpp  GLWindow.hpp  MainWindow.hpp  OniDevice.hpp  OniVideoStream.hpp
